# xARPES

./: .gitignore  README.md  git.patch  pyproject.toml  requirements.txt
dev_tools/: Rmd2ipynb.py  Rmd2py.py  ipynb2Rmd2py.py
doc/: Makefile  conf.py  index.rst  requirements.txt
doc/modules/: bandmap.rst  mdcs.rst  selfenergies.rst  settings_parameters.rst  settings_plots.rst  spectral.rst
doc/notebooks/: cu_111.ipynb  graphene.ipynb  srtio3.ipynb  verification.ipynb
examples/: Rmd2py.py
examples/cu_111/: cu_111.Rmd  cu_111.py
examples/cu_111/data_sets/: fig1a_laser.txt
examples/fermi_edge/: fermi_edge_example.Rmd  fermi_edge_example.py
examples/graphene/: graphene.Rmd  graphene.py  linear_fitting.Rmd  linear_fitting.py
examples/graphene/data_sets/: graphene_152.ibw  graphene_152_angles.npy  graphene_152_ekin.npy  graphene_152_intensities.npy
examples/srtio3/: srtio3.Rmd  srtio3.py
examples/srtio3/data_sets/: STO_2_0010STO_2_angles.npy  STO_2_0010STO_2_ekin.npy  STO_2_0010STO_2_intensities.npy
examples/verification/: verification.Rmd  verification.py
exubi/: __init__.py  band_map.py  distributions.py  functions.py  plotting.py
logo/: Makefile
xarpes/: __init__.py  band_map.py  bandmap.py  constants.py  distributions.py  functions.py  mdcs.py  plotting.py  selfenergies.py  settings_parameters.py  settings_plots.py  spectral.py
