[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exubi"
dynamic = ["version", "dependencies"]
authors = [{name = "exubi Developers"}]
description = "Eliashberg eXtraction Using Bayesian Inference"
readme = "README.md"
urls = {Homepage = "https://github.com/TeetotalingTom/exubi"}
classifiers = [
    "Programming Language :: Python :: 3",
]

[tool.setuptools]
packages = ["exubi"]

[tool.setuptools.dynamic]
version = {attr = "exubi.__version__"}
dependencies = {file = ["requirements.txt"]}
